# command-line-snake

./: CMakeLists.txt  README.md  TODO.md  build.sh  client-start.sh  planning_architecture.md  server-start.sh  start.cpp
UnitTest/: tests_catch2.cpp
communication/: client.cpp  server.cpp
dependencies/: CMakeLists.txt  kbhit.cpp  kbhit.h
entities/: CMakeLists.txt  entities.cpp  entities.h
fakeit/: fakeit.hpp
gamelogic/: CMakeLists.txt  gamelogic.cpp  gamelogic.h
gamemodes/: CMakeLists.txt  gamemodes.cpp  gamemodes.h
headers/: CMakeLists.txt  error_codes.h  headers.h
menu/: CMakeLists.txt  menu.cpp  menu.h
snake/: CMakeLists.txt  snake.cpp  snake.h
timer/: CMakeLists.txt  timer.cpp  timer.h
userinteraction/: CMakeLists.txt  userinteraction.cpp  userinteraction.h
